# onnxruntime-build

.github/workflows/: linux-217.yaml  macos-arm64.yaml
static_lib/: CMakeLists.txt
